--- a/templates/main.html
+++ b/templates/main.html
@@ -77,7 +77,7 @@
 
 
 		<div id="contents">
-			<h2>Status Codes</h2>
+			<h2>Status Codes ({{.StatusCodes.GrandTotal}})</h2>
 			<table class="table table-bordered table-condensed">
 				<tbody>
 					{{range $k, $v := .StatusCodes.Collect}}
