added FormatStatusCodeName() and fixed bug with "error" page extentions being logged

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
 						<tbody>
 							{{range $name, $value := $v}}
 							<tr>
-								<td>{{$name}}</td>
+								<td title="{{$name | formatStatusCode}}">{{$name}}</td>
 								<td>{{$value | formatCommas}}</td>
 							</tr>
 							{{end}}
