--- a/templates/index.html
+++ b/templates/index.html
@@ -15,79 +15,76 @@
 			text-align: center;
 			vertical-align: middle;
 		}
-		
+
 		footer .text-muted {
 			margin: 10px 0;
 		}
+
 		/* div table */
-		
+
 		.qrow {
 			display: table-row;
 		}
-		
+
 		.qrow:nth-of-type(even) {
 			background-color: #f9f9f9;
 		}
-		
+
 		.qcolumn {
 			padding: .3em .5em;
 			display: table-cell;
 			min-width: 80px;
 			text-align: right;
 		}
-		
+
 		.qcolumn:first-child {
 			font-weight: bold;
 			text-align: left;
 		}
-		
+
 		.qcolumn.hits {
 			background-color: #008040;
 			color: white;
 			font-weight: bold;
 		}
-		
+
 		.qcolumn.pages {
 			background-color: #0080FF;
 			color: white;
 			font-weight: bold;
 		}
-		
+
 		.qcolumn.visitors {
 			background-color: #FFFF00;
 			color: black;
 			font-weight: bold;
 		}
-		
+
 		h2 {
 			border-bottom: 1px solid #eee;
 		}
-		
+
+		.fcontain {
+			display: flex;
+			flex-wrap: wrap;
+		}
+
 		.fw {
-			float: left;
 			margin-right: 10px;
 		}
-		
-		.fcontain:after {
-			content: " ";
-			/* Older browser do not support empty content */
-			visibility: hidden;
-			display: block;
-			height: 0;
-			clear: both;
-		}
-		
+
 		.fcontain td:first-child {
 			text-align: left;
 		}
-		
+
 		.fcontain td:last-child {
 			text-align: right;
 		}
-		
+
 		.status-green {
 			background-color: #c1e9b2
 		}
+
 	</style>
 </head>
 
@@ -127,7 +124,7 @@
 						<tbody>
 							{{range $name, $value := $v}}
 							<tr>
-								<td>{{if eq $name ""}}/{{else}}{{$name}}{{end}}</td>
+								<td>{{if eq $name ""}}./{{else}}{{$name}}{{end}}</td>
 								<td>{{$value | formatCommas}}</td>
 							</tr>
 							{{end}}
