--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
 			background-color: #f5f5f5;
 			text-align: center;
 			vertical-align: middle;
+			margin-top: 50px;
 		}
 		
 		footer .text-muted {
@@ -59,6 +60,11 @@
 			font-weight: bold;
 		}
 		
+		.qcolumn.total {
+			border-top: 2px solid black;
+			font-weight: bold;
+		}
+		
 		h2 {
 			border-bottom: 1px solid #eee;
 		}
@@ -90,6 +96,32 @@
 
 	<div class="container">
 
+		<div class="page-header">
+			<h1>sitename.com</h1>
+		</div>
+
+		<div id="contents">
+			{{range $iy, $vy := .Hits.Years}}
+			<h3>{{$iy}}</h3>
+			<div class="qrow">
+				<div class="qcolumn"></div>
+				<div class="qcolumn hits">Hits</div>
+				<div class="qcolumn pages">Pages</div>
+			</div>
+			{{range $im, $vm := $vy.Months}}
+			<div class="qrow">
+				<div class="qcolumn"><a href="{{$iy | pathDirectory}}/{{$im | pathFilename}}">{{$im | formatMonth}}</a></div>
+				<div class="qcolumn" title="{{$vm.Total | formatCommas}}">{{$vm.Total | formatShortHand}}</div>
+				<div class="qcolumn" title="{{(index (index $.Pages.Years $iy).Months $im).Total | formatCommas}}">{{(index (index $.Pages.Years $iy).Months $im).Total | formatShortHand}}</div>
+			</div>
+			{{end}}
+			<div class="qrow">
+				<div class="qcolumn"></div>
+				<div class="qcolumn total" title="{{$vy.Total | formatCommas}}">{{$vy.Total | formatShortHand}}</div>
+				<div class="qcolumn total" title="">{{(index $.Pages.Years $iy).Total | formatShortHand}}</div>
+			</div>
+			{{end}}
+		</div>
 
 	</div>
 	<footer>
