--- a/templates/month.html
+++ b/templates/month.html
@@ -14,6 +14,7 @@
 			background-color: #f5f5f5;
 			text-align: center;
 			vertical-align: middle;
+			margin-top: 50px;
 		}
 		
 		footer .text-muted {
