split the css into its own file

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,88 +8,8 @@
 	<title>nginx Stats</title>
 
 	<link href="bootstrap.min.css" rel="stylesheet">
+	<link href="main.css" rel="stylesheet">
 
-	<style>
-		footer {
-			background-color: #f5f5f5;
-			text-align: center;
-			vertical-align: middle;
-			margin-top: 50px;
-		}
-		
-		footer .text-muted {
-			margin: 10px 0;
-		}
-		/* div table */
-		
-		.qrow {
-			display: table-row;
-		}
-		
-		.qrow:nth-of-type(even) {
-			background-color: #f9f9f9;
-		}
-		
-		.qcolumn {
-			padding: .3em .5em;
-			display: table-cell;
-			min-width: 80px;
-			text-align: right;
-		}
-		
-		.qcolumn:first-child {
-			font-weight: bold;
-			text-align: left;
-		}
-		
-		.qcolumn.hits {
-			background-color: #008040;
-			color: white;
-			font-weight: bold;
-		}
-		
-		.qcolumn.pages {
-			background-color: #0080FF;
-			color: white;
-			font-weight: bold;
-		}
-		
-		.qcolumn.visitors {
-			background-color: #FFFF00;
-			color: black;
-			font-weight: bold;
-		}
-		
-		.qcolumn.total {
-			border-top: 2px solid black;
-			font-weight: bold;
-		}
-		
-		h2 {
-			border-bottom: 1px solid #eee;
-		}
-		
-		.fcontain {
-			display: flex;
-			flex-wrap: wrap;
-		}
-		
-		.fw {
-			margin-right: 10px;
-		}
-		
-		.fcontain td:first-child {
-			text-align: left;
-		}
-		
-		.fcontain td:last-child {
-			text-align: right;
-		}
-		
-		.status-green {
-			background-color: #c1e9b2
-		}
-	</style>
 </head>
 
 <body>
