--- a/http/main.css
+++ b/http/main.css
@@ -1,8 +1,23 @@
+html {
+	position: relative;
+	min-height: 100%;
+}
+body {
+	/* Margin bottom by footer height */
+	margin-bottom: 60px;
+}
+
 footer {
 	background-color: #f5f5f5;
 	text-align: center;
 	vertical-align: middle;
 	margin-top: 50px;
+
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	background-color: #f5f5f5;
 }
 
 footer .text-muted {
