--- a/templates/month.html
+++ b/templates/month.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>nginx Stats</title>
+	<title>{{.Domain}} Stats</title>
 
 	<link href="../bootstrap.min.css" rel="stylesheet">
 	<link href="../main.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	<div class="container">
 
 		<div class="page-header">
-			<h1>sitename.com</h1>
+			<h1>{{.Domain}}</h1>
 		</div>
 
 		<div id="contents">
@@ -85,7 +85,7 @@
 	</div>
 	<footer>
 		<div class="container">
-			<p class="text-muted">Date Last Updated: {{.DateCreated}}</p>
+			<p class="text-muted">Generated: {{.DateCreated}}</p>
 		</div>
 	</footer>
 
