templates have menu and bit updated formatting

--- a/templates/month.html
+++ b/templates/month.html
@@ -16,9 +16,27 @@
 
 	<div class="container">
 
-		<div class="page-header">
-			<h1>{{.Domain}}</h1>
-		</div>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				  <span class="sr-only">Toggle navigation</span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				</button>
+					<a class="navbar-brand" href="../">{{.Domain}}</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="../">Home</a></li>
+						<li><a href="../errors.html">Errors</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
 
 		<div id="contents">
 			<h2>{{.Hits.Date | formatMonthYear}}</h2>
@@ -36,6 +54,13 @@
 				<div class="qcolumn" title="{{(index $.IPS.Days $day)}}">{{(index $.IPS.Days $day) | formatCommas}}</div>
 			</div>
 			{{end}}
+
+			<div class="qrow">
+				<div class="qcolumn"></div>
+				<div class="qcolumn total" title="">{{.Hits.Total | formatShortHand}}</div>
+				<div class="qcolumn total" title="">{{.Pages.Total | formatShortHand}}</div>
+				<div class="qcolumn total" title="">{{.IPS.Total | formatShortHand}}</div>
+			</div>
 		</div>
 
 
