--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,28 @@
 
 	<div class="container">
 
-		<div class="page-header">
-			<h1>{{.Domain}}</h1>
-		</div>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				  <span class="sr-only">Toggle navigation</span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				</button>
+					<a class="navbar-brand" href="./">{{.Domain}}</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="./">Home</a></li>
+						<li><a href="errors.html">Errors</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
+
 
 		<div id="contents">
 			{{range $iy, $vy := .Hits.Years}}
@@ -38,7 +57,7 @@
 			<div class="qrow">
 				<div class="qcolumn"></div>
 				<div class="qcolumn total" title="{{$vy.Total | formatCommas}}">{{$vy.Total | formatShortHand}}</div>
-				<div class="qcolumn total" title="">{{(index $.Pages.Years $iy).Total | formatShortHand}}</div>
+				<div class="qcolumn total" title="{{(index $.Pages.Years $iy).Total | formatCommas}}">{{(index $.Pages.Years $iy).Total | formatShortHand}}</div>
 			</div>
 			{{end}}
 		</div>
