--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,21 @@
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				  <span class="sr-only">Toggle navigation</span>
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				</button>
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<a class="navbar-brand" href="./">{{.Domain}}</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="./">Home</a></li>
-						<li><a href="errors.html">Errors</a></li>
+						<li class="active">
+							<a href="./">Home</a>
+						</li>
+						<li>
+							<a href="errors.html">Errors</a>
+						</li>
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
@@ -46,12 +50,20 @@
 				<div class="qcolumn"></div>
 				<div class="qcolumn hits">Hits</div>
 				<div class="qcolumn pages">Pages</div>
+				<div class="qcolumn">Min</div>
+				<div class="qcolumn">Max</div>
+				<div class="qcolumn">Avg</div>
 			</div>
 			{{range $im, $vm := $vy.Months}}
 			<div class="qrow">
-				<div class="qcolumn"><a href="{{$iy | pathDirectory}}/{{$im | pathFilename}}">{{$im | formatMonth}}</a></div>
+				<div class="qcolumn">
+					<a href="{{$iy | pathDirectory}}/{{$im | pathFilename}}">{{$im | formatMonth}}</a>
+				</div>
 				<div class="qcolumn" title="{{$vm.Total | formatCommas}}">{{$vm.Total | formatShortHand}}</div>
 				<div class="qcolumn" title="{{(index (index $.Pages.Years $iy).Months $im).Total | formatCommas}}">{{(index (index $.Pages.Years $iy).Months $im).Total | formatShortHand}}</div>
+				<div class="qcolumn" title="{{(index (index $.Pages.Years $iy).Months $im).Min | formatCommas}}">{{(index (index $.Pages.Years $iy).Months $im).Min | formatShortHand}}</div>
+				<div class="qcolumn" title="{{(index (index $.Pages.Years $iy).Months $im).Max | formatCommas}}">{{(index (index $.Pages.Years $iy).Months $im).Max | formatShortHand}}</div>
+				<div class="qcolumn" title="{{(index (index $.Pages.Years $iy).Months $im).Avg | formatCommas}}">{{(index (index $.Pages.Years $iy).Months $im).Avg | formatShortHand}}</div>
 			</div>
 			{{end}}
 			<div class="qrow">
