--- a/http/main.css
+++ b/http/main.css
@@ -74,6 +74,10 @@ footer .text-muted {
 	font-weight: bold;
 }
 
+.qcolumn.secondary {
+	color:silver;
+	font-style:italic;
+}
 
 /* flexbox elements */
 
