--- a/templates/month.html
+++ b/templates/month.html
@@ -15,27 +15,43 @@
 		var cutoffTR = 20;
 
 		$(document).ready(function() {
+			// if "Show All" button is clicked
 			$("#control-showall").click(function(e) {
 				e.preventDefault();
 
-				if ($(this).hasClass("btn-default")) {
-					$(this).removeClass("btn-default").addClass("btn-success");
+				if ($(this).hasClass("btn-default")) {// show all
+					$(this).removeClass("btn-default").addClass("btn-success");// toggle the "Show All" button
 
-					$("div.fcontain").slideDown(400);
-					$(".fcontain table tr").show();
-				} else {
+					$("div.fcontain").slideDown(400);// expand all the containers
+					$(".fcontain table tr").show();// show all the TR past the cutoffTR
+					$(".arrow").addClass("down").removeClass("right");// change hte collapse arrows
+				} else {// hide all
 					$(this).removeClass("btn-success").addClass("btn-default");
 
 					$("div.fcontain").slideUp(400);
 					HideCutoffTR(cutoffTR);
+					$(".arrow").addClass("right").removeClass("down");
 				}
 
 			});
 
+			// section is clicked, exand .fcontain
 			$("h3.btn").click(function() {
-				$(this).next("div").slideToggle(400);
+				var arrow = $(this).children(".arrow");
+
+				$(this).next("div").slideToggle(400, function() {
+					// after it finishes, change the arrow
+					if (arrow.hasClass("down")) {
+						arrow.addClass("right").removeClass("down");
+					} else {
+						arrow.addClass("down").removeClass("right");
+					}
+				});
+
+
 			});
 
+			// hide all TR past cutoffTR when page loads
 			HideCutoffTR(cutoffTR);
 		});
 
@@ -46,7 +62,7 @@
 				// count tr
 				tr = $(this).find("tr");
 
-				// if it has more than 10 items in this list, hide everything over 20
+				// if it has more than 'cutoff' items in this list, hide those extras
 				if (tr.length > cutoff) {
 					tr.slice(cutoff).hide();
 				}
@@ -113,7 +129,7 @@
 
 
 		<div id="contents">
-			<h3 class="btn btn-primary btn-lg btn-block">File Extensions</h3>
+			<h3 class="btn btn-primary btn-lg btn-block">File Extensions <span class="arrow right"></span></h3>
 			<div class="fcontain" style="display:none;">
 				{{range $day, $v := .Extensions.Days}}
 				<div class="fw">
@@ -135,7 +151,7 @@
 
 
 		<div id="contents">
-			<h3 class="btn btn-primary btn-lg btn-block">Directories</h3>
+			<h3 class="btn btn-primary btn-lg btn-block">Directories <span class="arrow right"></span></h3>
 			<div class="fcontain" style="display:none;">
 				{{range $day, $v := .Directories.Days}}
 				<div class="fw">
@@ -157,7 +173,7 @@
 
 
 		<div id="contents">
-			<h3 class="btn btn-primary btn-lg btn-block">Status Codes</h3>
+			<h3 class="btn btn-primary btn-lg btn-block">Status Codes <span class="arrow right"></span></h3>
 			<div class="fcontain" style="display:none;">
 				{{range $day, $v := .StatusCodes.Days}}
 				<div class="fw">
